--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "bootstrap": "^5.1.0",
+    "bootstrap": "^5.3.0",
     "file-saver": "^2.0.5",
-    "html2canvas": "^1.3.2",
-    "jspdf": "^2.3.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.0.0-beta.6",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.2.0",
+    "react-icons": "^4.10.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
